Add inlining section

--- a/specs/language/glossary.tex
+++ b/specs/language/glossary.tex
@@ -86,3 +86,10 @@
   largest unit of a shader execution. Also called: grid, compute space or index
   space.}
 }
+
+\newglossaryentry{entry function}
+{
+  name={Entry Function},
+  description={Function representing the point where shader execution begins for
+  the given stage.}
+}
