--- a/specs/language/overloading.tex
+++ b/specs/language/overloading.tex
@@ -47,7 +47,7 @@ class Doggo {
 };
 \end{HLSL}
 
-  \item An overload set contains more than one entry function declaration
+  \item An overload set contains more than one \gls{entry function} declaration
   (\ref{Decl.Attr.Entry}).
 \begin{HLSL}
 [shader("vertex")]
